TaskTest: make necessary corrections to improve logic